Removed layout bug from fade-in

--- a/src/App.scss
+++ b/src/App.scss
@@ -78,7 +78,6 @@
   opacity: 1;
   transform: none;
   visibility: visible;
-  display: flex;
 }
 
 .gradient__bg {
